...
                return "Service Information Available"
            case .CBAdvertisementDataOverflowServiceUUIDs:
                return "Additional Service Information Available"
            case .CBAdvertisementDataTxPowerLevel:
                return "Transmit power level"
            case .CBAdvertisementDataIsConnectable:
                return "Device is connectable"
            case .CBAdvertisementDataLocalNameKey:
                return "Device name"
            case .CBAdvertisementDataManufacturerData:
                return "Manufacturer data"
            case .CBAdvertisementDataSolicitedServiceUUIDs:
                return "Solicited services UUIDs"
...
