...
                            .padding(.top, 5)
                            .padding(.bottom, 10)
                        }
                    } //: VSTACK - Services
                } //: VSTACK)
                .padding(10)
                .accessibilityIdentifier("Device View")
            } //: SCROLLVIEW
        } //: VSTACK - Main
        .padding(.horizontal, 10)
    }
}

...
